--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "preworkstudyguide"]
     path = preworkstudyguide
-    url= git@github.com:tcstl95/preworkstudyguide.git
+    url= https://github.com/tcstl95/preworkstudyguide.git
